--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dev-utils": "^9.0.3",
     "react-dom": "^16.9.0",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.0.7",
     "react-helmet-async": "^1.0.4",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
