Appbar and drawer

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth-system",
+  "name": "React-Boilerplate",
   "version": "0.1.0",
   "homepage": "http://xristos1994.github.io/my-auth/",
   "private": true,
