--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "storybook": "start-storybook"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -153,6 +154,8 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-knobs": "^5.2.8",
+    "@storybook/react": "^5.2.8",
     "gh-pages": "^2.1.1"
   }
 }
