--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react-hooks": "^1.6.1",
     "file-loader": "3.0.1",
     "final-form": "^4.18.6",
+    "final-form-calculate": "^1.3.1",
     "fs-extra": "7.0.1",
     "history": "^4.10.1",
     "html-webpack-plugin": "4.0.0-beta.5",
@@ -38,6 +39,7 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.8.0",
     "jest-watch-typeahead": "0.3.1",
+    "material-ui-chip-input": "^2.0.0-beta.2",
     "material-ui-form": "^1.0.0-alpha.26",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
