--- a/package.json
+++ b/package.json
@@ -90,8 +90,7 @@
     "storybook": "start-storybook -p 4001 -s public",
     "screenshot": "npm run test ^.withscr.test/*.js",
     "noscreenshot": "npm run test    ^.noscr.test/*.js",
-    "flow": "flow",
-    "pretest": "npm run flow && npm run lint"
+    "flow": "flow"
   },
   "eslintConfig": {
     "extends": [
@@ -145,21 +144,21 @@
     "moduleNameMapper": {
       "^react-native$": "react-native-web",
       "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy",
-      "@core/store(.*)$": "<rootDir>/src/core/store$1",
-      "@core/components(.*)$": "<rootDir>/src/core/components$1",
-      "@core/utils(.*)$": "<rootDir>/src/core/utils$1",
-      "@core/models(.*)$": "<rootDir>/src/core/models$1",
-      "@core/operators(.*)$": "<rootDir>/src/core/operators$1",
-      "@core/actions-engine(.*)$": "<rootDir>/src/core/actions-engine$1",
-      "@core/configuration(.*)$": "<rootDir>/src/core/configuration$1",
-      "@core/testing(.*)$": "<rootDir>/src/core/testing$1",
-      "website(.*)$": "<rootDir>/src/website/$1",
-      "components(.*)$": "<rootDir>/src/website/components/$1",
-      "utils(.*)$": "<rootDir>/src/website/utils/$1",
-      "models(.*)$": "<rootDir>/src/website/models/$1",
-      "services(.*)$": "<rootDir>/src/website/services/$1",
-      "routes(.*)$": "<rootDir>/src/website/routes/$1",
-      "theme(.*)$": "<rootDir>/src/theme/$1"
+      "^@core/store(.*)$": "<rootDir>/src/core/store$1",
+      "^@core/components(.*)$": "<rootDir>/src/core/components$1",
+      "^@core/utils(.*)$": "<rootDir>/src/core/utils$1",
+      "^@core/models(.*)$": "<rootDir>/src/core/models$1",
+      "^@core/operators(.*)$": "<rootDir>/src/core/operators$1",
+      "^@core/actions-engine(.*)$": "<rootDir>/src/core/actions-engine$1",
+      "^@core/configuration(.*)$": "<rootDir>/src/core/configuration$1",
+      "^@core/testing(.*)$": "<rootDir>/src/core/testing$1",
+      "^website(.*)$": "<rootDir>/src/website/$1",
+      "^components(.*)$": "<rootDir>/src/website/components/$1",
+      "^utils(.*)$": "<rootDir>/src/website/utils/$1",
+      "^models(.*)$": "<rootDir>/src/website/models/$1",
+      "^services(.*)$": "<rootDir>/src/website/services/$1",
+      "^routes(.*)$": "<rootDir>/src/website/routes/$1",
+      "^theme(.*)$": "<rootDir>/src/theme/$1"
     },
     "moduleFileExtensions": [
       "web.js",
