--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "history": "^4.10.1",
     "html-webpack-plugin": "4.0.0-beta.5",
     "i18next": "^19.0.2",
+    "i18next-browser-languagedetector": "^4.0.1",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
     "jest-environment-jsdom-fourteen": "0.1.0",
